rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/rolling_window/snapshots/cubesqlplanner__tests__integration__rolling_window__different_granularities__rolling_with_week_granularity.snap
---
source: cubesqlplanner/src/tests/integration/rolling_window/different_granularities.rs
expression: result
---
orders__created_at_week | orders__rolling_sum_trailing_7d
------------------------+--------------------------------
2024-01-01 00:00:00     | 195.00                         
2024-01-08 00:00:00     | 305.00                         
2024-01-15 00:00:00     | 440.00                         
2024-01-22 00:00:00     | 180.00                         
2024-01-29 00:00:00     | 430.00                         
2024-02-05 00:00:00     | 40.00                          
2024-02-12 00:00:00     | 465.00                         
2024-02-19 00:00:00     | 220.00                         
2024-02-26 00:00:00     | 130.00                         
2024-03-04 00:00:00     | 85.00                          
2024-03-11 00:00:00     | 170.00                         
2024-03-18 00:00:00     | NULL                           
2024-03-25 00:00:00     | 395.00
