rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/rolling_window/snapshots/cubesqlplanner__tests__integration__rolling_window__different_granularities__rolling_with_year_granularity.snap
---
source: cubesqlplanner/src/tests/integration/rolling_window/different_granularities.rs
expression: result
---
orders__created_at_year | orders__rolling_sum_trailing_7d
------------------------+--------------------------------
2024-01-01 00:00:00     | NULL
