rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/rolling_window/snapshots/cubesqlplanner__tests__integration__rolling_window__different_granularities__to_date_quarter_with_week_granularity.snap
---
source: cubesqlplanner/src/tests/integration/rolling_window/different_granularities.rs
expression: result
---
orders__created_at_week | orders__rolling_sum_to_date_quarter
------------------------+------------------------------------
2024-01-01 00:00:00     | 195.00                             
2024-01-08 00:00:00     | 500.00                             
2024-01-15 00:00:00     | 940.00                             
2024-01-22 00:00:00     | 1120.00                            
2024-01-29 00:00:00     | 1550.00                            
2024-02-05 00:00:00     | 1590.00                            
2024-02-12 00:00:00     | 2055.00                            
2024-02-19 00:00:00     | 2275.00                            
2024-02-26 00:00:00     | 2405.00                            
2024-03-04 00:00:00     | 2490.00                            
2024-03-11 00:00:00     | 2660.00                            
2024-03-18 00:00:00     | 2660.00                            
2024-03-25 00:00:00     | 3055.00
