rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/rolling_window/snapshots/cubesqlplanner__tests__integration__rolling_window__different_granularities__to_date_year_with_month_granularity.snap
---
source: cubesqlplanner/src/tests/integration/rolling_window/different_granularities.rs
expression: result
---
orders__created_at_month | orders__rolling_sum_to_date_year
-------------------------+---------------------------------
2024-01-01 00:00:00      | 1300.00                         
2024-02-01 00:00:00      | 2405.00                         
2024-03-01 00:00:00      | 3055.00
